# space_app_rs

./: Cargo.toml  README.md  clippy.toml
assets/mods/vanilla/: mod.mod_info.ron
crates/app/: Cargo.toml
crates/app/src/: lib.rs  plugins.rs
crates/game/: Cargo.toml
crates/game/src/: lib.rs  plugins.rs  prelude.rs
crates/game/src/plugins/: fullscreen_switch.rs
crates/game_commands/: Cargo.toml
crates/game_commands/src/: generation.rs  lib.rs  prelude.rs
crates/game_commands/src/generation/: scene_tree.rs
crates/game_states/: Cargo.toml
crates/game_states/src/: lib.rs
crates/game_utils/: Cargo.toml
crates/game_utils/src/: lib.rs  plugins.rs  systems.rs
crates/game_utils/src/systems/: fullscreen_switch.rs
crates/game_world_manager/: Cargo.toml
crates/game_world_manager/src/: prelude.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  plugins.rs  prelude.rs
crates/ui_core/: Cargo.toml
crates/ui_core/src/: components.rs  ent_commands.rs  lib.rs  plugins.rs  prelude.rs  resources.rs  states.rs
crates/ui_core/src/ent_commands/: font.rs  z_index.rs
crates/ui_core/src/resources/: collections.rs  tree.rs
crates/ui_loading/: Cargo.toml
crates/ui_loading/src/: components.rs  lib.rs  plugins.rs  prelude.rs  resources.rs  systems.rs
crates/ui_loading/src/resources/: asset_collections.rs  config.rs
crates/ui_loading/src/systems/: building_states.rs  cleanup.rs  loading_states.rs  one_shot.rs  setup.rs
crates/ui_menu/: Cargo.toml
crates/ui_menu/src/: helpers.rs  lib.rs  plugins.rs  prelude.rs  resources.rs  systems.rs  widgets.rs
crates/ui_menu/src/plugins/: scale_background.rs
crates/ui_menu/src/systems/: menu.rs  scale_background.rs  setup.rs
crates/ui_menu/src/widgets/: banner.rs  entity_commands.rs
crates/ui_style/: Cargo.toml
crates/ui_style/src/: helpers.rs  lib.rs  plugins.rs  systems.rs
src/: main.rs
