[package]
name = "decay_race"
version = "0.0.1"
readme = "README.md"

[workspace]
resolver = "2"

members = [

]

[[bin]]
name = "space_app"
path = "src/main.rs"

[dependencies]
bevy.workspace = true
decay_engine.workspace = true

[workspace.dependencies]
bevy         = { version = "0.14.2", features = ["file_watcher"] }
decay_engine = { git = "https://github.com/Wyatt65/decay_engine.git" }

[workspace.lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"