[package]
name = "space_app"
version = "0.0.1"
edition = "2021"
readme = "README.md"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[profile.release]
codegen-units = 1
lto = "thin"
## linker
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
rustflags = [
    # Nightly
    "-Zshare-generics=y",
    #     "-Zthreads=0",
]

[workspace]
resolver = "2"

members = [
# ui - primarily egui and misc
    "crates/ui_loading",
    "crates/ui_menu",
    "crates/ui_style",
    "crates/ui_core",
# game - app and game logic
    "crates/game_states",
    "crates/game_commands",
    "crates/game_utils",
    "crates/game_world_manager",
# exports
    "crates/ui",
    "crates/game",
    "crates/app"
]

[[bin]]
name = "space_app"
path = "src/main.rs"



[dependencies]
app = { path = "crates/app" }
bevy.workspace = true
space_engine.workspace = true
bevy_asset_loader.workspace = true
bevy-inspector-egui.workspace = true
bevy_tweening.workspace = true

[workspace.dependencies]
bevy         = { version = "0.14.2", features = ["file_watcher"] }
space_engine = { path = "../../space_engine" }
bevy_asset_loader = { version = "0.21.0", features = ["2d"] }
bevy-inspector-egui = { version = "0.26.0"}
bevy_tweening = { version = "0.11.0", features = ["bevy_sprite", "bevy_ui", "bevy_text"]}


[workspace.lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
